# subgraph-monitor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yaml  release.yaml
haproxy/: haproxy.cfg  monitor_up.sh
prometheus/: alertmanager.yaml  alertmanager.yaml.template  alerts.yaml  compose.yaml  prometheus.yaml
src/: dashboard.rs  main.rs
