[package]
name = "subgraph-monitor"
author = "tommi@romeblockchain.com"
version = "0.1.1"
edition = "2021"
description = "A tool to monitor The Graph subgraph sync status"

[dependencies]
actix-web = "4.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.3.0", features = ["derive"] }
prometheus = "0.14"
chrono = "0.4.26"
